Move sources to src

--- a/.zed/tasks.json
+++ b/.zed/tasks.json
@@ -1,7 +1,7 @@
 [
   {
     "label": "Scala run",
-    "command": "scala-cli .",
+    "command": "scala-cli run .",
     "tags": ["scala-main"]
   }
 ]
